--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,18 +2,19 @@
     <string name="app_name">Popular Movies</string>
     <string name="popular">Most Popular</string>
     <string name="rated">Highest Rated</string>
-    <string name="error_message">
-        An error has occurred. Probably you are offline. Please, make sure that you have a internet
-        connection. Try again selecting a option in menu.
-    </string>
+    <string name="error_message">No Internet connection or unavailable server.</string>
+    <string name="withoutInternet">Without Internet?</string>
+    <string name="retry">Retry</string>
+
+    <!-- api_key Parameter -->
+    <string name="api_key_param">api_key</string>
+    <!-- TODO Add key-->
+    <string name="key"></string>
 
     <!-- The movie DB URLs -->
     <string name="poster_url">https://image.tmdb.org/t/p/w500</string>
     <string name="most_popular_url">https://api.themoviedb.org/3/movie/popular</string>
     <string name="highest_rated_url">https://api.themoviedb.org/3/movie/top_rated</string>
-
-    <!-- TODO Add key-->
-    <string name="key"></string>
 
     <!-- JSON Tags-->
     <string name="JSON_tag_results">results</string>
@@ -22,9 +23,6 @@
     <string name="JSON_tag_overview">overview</string>
     <string name="JSON_tag_release_date">release_date</string>
     <string name="JSON_tag_vote_average">vote_average</string>
-
-    <!-- api_key Parameter -->
-    <string name="api_key_param">api_key</string>
 
     <!-- Content Descriptions -->
     <string name="movieNameBackground">Movie name background</string>
